--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
 	"logLevel": 5,
 	"port": 8888,
 	"forks":{
-		"default":"sleepless.com:80"
+		"default":		{ "host":"gus.sleepless.com",	"port":80 },
+		"google.com":	{ "host":"google.com",			"port":80 }
 	}
 }
 
