--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 	"logLevel": 5,
 	"port": 8888,
 	"forks":{
-		"default":		{ "host":"oandpedu.com",	"port":80 },
-		"google.com":	{ "host":"google.com",			"port":80 }
+		"default":			{ "host":"localhost",		"port":80 },
+		"jobtool.com":		{ "host":"localhost",		"port":3901 }
 	}
 }
 
