--- a/config.json
+++ b/config.json
@@ -1,9 +1,11 @@
 {
-	"logLevel": 2,
+	"logLevel": 1,
 	"port": 8888,
 	"forks":{
-		"default":			{ "host":"localhost",		"port":80 },
-		"jobtool.com":		{ "host":"localhost",		"port":3901 }
+		"sleepless.com":	{ "host":"208.73.49.29",		"port":80 },
+		"jobtool.com":		{ "host":"208.73.49.28",		"port":3901 },
+		"oandpeducation.com":		{ "host":"208.73.49.30",		"port":80 },
+		"default":			{ "host":"208.73.49.29",		"port":80 }
 	}
 }
 
