--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-	"name": "forker",
-	"version": "2.0.6",
-	"description": "A forking HTTP proxy (you heard me)",
-	"author": "Joe Hitchens <joe@sleepless.com>",
-	"homepage": "https://github.com/sleeplessinc/forker",
-	"keywords": [
-		"simple",
-		"proxy",
-		"http",
-		"sleepless"
-	],
-	"license": {
-		"type": "MIT",
-		"url": "https://github.com/sleeplessinc/forker/raw/master/LICENSE"
-	},
-	"repositories": [
-		{
-			"type": "git",
-			"url": "https://sleeplessinc@github.com/sleeplessinc/forker.git"
-		}
-	],
-	"dependencies": {
-		"log5": "1.2.9"
-	}
+  "name": "forker",
+  "version": "2.0.6",
+  "description": "A forking HTTP proxy (you heard me)",
+  "author": "Joe Hitchens <joe@sleepless.com>",
+  "homepage": "https://github.com/sleeplessinc/forker",
+  "keywords": [
+    "simple",
+    "proxy",
+    "http",
+    "sleepless"
+  ],
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/sleeplessinc/forker/raw/master/LICENSE"
+  },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://sleeplessinc@github.com/sleeplessinc/forker.git"
+    }
+  ],
+  "dependencies": {
+    "express": "^4.15.0",
+    "http-proxy": "^1.16.2",
+    "log5": "1.2.9",
+    "sleepless": "^2.4.7",
+    "vhost": "^3.0.2"
+  }
 }
